<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/batch_view">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameText"
            app:layout_constraintStart_toEndOf="@+id/nameView"
            android:layout_marginStart="70dp" android:layout_marginLeft="70dp" android:textSize="18sp"
            android:autofillHints="" tools:targetApi="o" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/batch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Lview2" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/nameView" android:textSize="18sp"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameView" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp" android:layout_marginTop="36dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/batchText"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/nameText" android:importantForAutofill="no" tools:targetApi="o"
            app:layout_constraintStart_toEndOf="@+id/Lview2" android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:textSize="18sp"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/Lview2"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailText" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/batchText" app:layout_constraintStart_toEndOf="@+id/textView8"
            android:layout_marginStart="70dp" android:layout_marginLeft="70dp"/>
    <TextView
            android:text="@string/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="68dp"
            android:textSize="18sp"/>
    <RadioGroup
            android:layout_width="233dp"
            android:layout_height="87dp"
            app:layout_constraintStart_toEndOf="@+id/textView9" android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/emailText" android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/male"
                android:layout_width="96dp"
                android:layout_height="wrap_content" android:id="@+id/radioButton5" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButton6" android:layout_weight="1"/>
    </RadioGroup>
    <TextView
            android:text="@string/known_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lang" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="68dp"/>
    <CheckBox
            android:text="@string/malayalam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/lang" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"/>
    <CheckBox
            android:text="@string/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox2" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lang" app:layout_constraintStart_toEndOf="@+id/checkBox"
            android:layout_marginTop="16dp"/>
    <CheckBox
            android:text="@string/hindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox3"
            app:layout_constraintTop_toBottomOf="@+id/lang"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/checkBox2" android:layout_marginTop="16dp"/>

    <Button
            android:id="@+id/rgstrButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="sendMessage"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

</androidx.constraintlayout.widget.ConstraintLayout>