<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".homeScreen">

    <TextView
            android:text="@string/android_workshop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="40dp"
            android:textSize="60sp"/>
    <ImageView
            android:layout_width="128dp"
            android:layout_height="130dp" app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/imageView" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintHorizontal_bias="0.234" android:contentDescription="@string/todo"/>
    <Button
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="88dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintHorizontal_bias="0.14"
            android:onClick="navigateMain"/>
    <TextView
            android:text="@string/amritapuri_campus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="72dp"
            app:layout_constraintHorizontal_bias="0.437"/>
    <TextView
            android:text="@string/_10th_august_19"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.211"/>
</androidx.constraintlayout.widget.ConstraintLayout>